fixed contact button on mobile nav

--- a/style.css
+++ b/style.css
@@ -1361,7 +1361,7 @@ nav ul li{
 	margin:5px 0px 0px 0px;
 }
 #contact1{
-	display:inline-block;
+	display:none;
 }
 #contact2{
 	display:inline-block;
